# IEEE-Workshop

./: CMakeLists.txt  README.md
.github/: README.md
PART1-STRUCTS/: CMakeLists.txt  README.md  main.c  strbuf.h
PART2-MEMORY-ALLOCATION/: CMakeLists.txt  README.md  fibonacci-gen.c  fibonacci-gen.h  main.c  main.h
PART3-FUNCTIONAL-PROGRAMMING/: CMakeLists.txt  README.md
PART3-FUNCTIONAL-PROGRAMMING/include/: array-sort.h  array-utils.h  comparator.h
PART3-FUNCTIONAL-PROGRAMMING/src/: array-sort.c  array-utils.c  comparator.c  main.c
PART3-FUNCTIONAL-PROGRAMMING/templates/: version.h.in
PART4-PROGRAMMING-PUZZLE/: CMakeLists.txt  README.md
