CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(IEEE C)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/PART1-STRUCTS)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/PART2-MEMORY-ALLOCATION)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/PART3-FUNCTIONAL-PROGRAMMING)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/PART4-PROGRAMMING-PUZZLE)